[tool.poetry]
name = "cyaron"
version = "0.6.0"
description = "CYaRon: Yet Another Random Olympic-iNformatics test data generator, A library for automatically generating test data for Online Judge, Olympic Informatics or automatic application testing"
authors = ["Luogu Development Team <k@luogu.org>"]
license = "LGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6"
xeger = "^0.4.0"
colorful = "^0.5.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Homepage" = "https://github.com/luogu-dev/cyaron"
"Bug Tracker" = "https://github.com/luogu-dev/cyaron/issues"
